# pi_pico

random_number_over_serial/: Cargo.toml
random_number_over_serial/src/: main.rs
