[package]
name = "random_number_over_serial"
version = "0.1.0"
edition = "2021"
author = "Yatin Goyal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
fugit = "0.3.6"
panic-halt = "0.2.0"
rp-pico = "0.5.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
